modified: ipython notebok

--- a/generate_story.ipynb
+++ b/generate_story.ipynb
@@ -68,11 +68,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# UTILITIES\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import urllib, cStringIO\n",
+    "import PIL.Image\n",
+    "from cStringIO import StringIO\n",
+    "from IPython.display import clear_output, Image, display\n",
+    "from scipy.misc import imresize\n",
+    "\n",
+    "def to_np(imgpath):\n",
+    "    img = np.float32(PIL.Image.open(imgpath))\n",
+    "    if len(img.shape) == 2:\n",
+    "        img = img.reshape(img.shape[0], img.shape[1], 1)\n",
+    "        img = np.repeat(img, 3, 2)\n",
+    "    return img\n",
+    "\n",
+    "def img_resize(img, size=(224, 224)):\n",
+    "    a = imresize(img, size)\n",
+    "    return a.astype(np.float32) # force to be a float image\n",
+    "\n",
+    "def show_img_array(a, fmt='jpeg', resize=True):\n",
+    "    if resize:\n",
+    "        a = img_resize(a)\n",
+    "    a = np.uint8(np.clip(a, 0, 255))\n",
+    "    f = StringIO()\n",
+    "    PIL.Image.fromarray(a).save(f, fmt)\n",
+    "    display(Image(data=f.getvalue()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/jpeg": "/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0a\nHBwgJC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIy\nMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCADgAOADASIA\nAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQA\nAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3\nODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWm\np6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEA\nAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSEx\nBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElK\nU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3\nuLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwDsdM8Q\nxOFjlKrjjcTW7DexyoWSQFexFeQJdMOhrT0/Vp4HUK5255FZSw/VFqpfc9QF4m7DPVlJgRxgj61y\ncGpWs0e6ZucYxj9a1LS4i3qkc4OV3Y9q5mrGu5tiWPGScUC4XIwcg1iT6tbxuYiw+YdaNNvldthk\n3EUm3a40kdEkm5cjpUc95FAjlpFUqM81CtxGi/exXF640smoFS5IbkgHoKun7xElY6fSNeW9uXg/\niBJznqK3/MXGSRXF6JpTR3EdwOE9q1tY1MW+yNcYJ+YHrTdua0RJaamw6I24s3y9ee1UbvVILO2j\nYTK/mNtXnPHc1y+oeKN8EtvCCuRt3H0rmJb1wo3MSF4HtWkKTe4nJI7rxN4h+y2aW1pIp85CSwPI\nFcBvLklmOfSonuN53FifTJqBrvBNdEKfKrGcpXZv6NrM2lLOYFUySLtDn+GqT3UpkM0khZyeST1r\nIN2xPWpEn3Lg803BXuCkdHZX7eaHVOB6Cux0bVBLZus7BHDcBuK8yhumjPynH0qz/aUjtuZjkVz1\nKN9jWMz1CS6hyIw43GszUHUIxx1rmNO1ZRKnnNnHOam1jVlAXY2d3U1yKk1OxtzKxl6lcCMnvmuR\num3SMcYya2765D9wTXPztljXo0VY5pu5Wc1A1SuahauhGJG1RNUjGozTEMNMJpzUw0AdKCaswMQR\niq4QjrU8Rw1ZtmiNeOZtgFTpcS5+UkN2xVKGU7egqzazETBjWLRaZeW3upnVFVmY10ui6bNbkPMj\nYNUNM1RYLpF2Bt2OTXTXOtWVhs86QHzDwFIOPrXHVc2+WxtHlWpDqtnJNATDN5eBkn1ri7gSwXK/\nMWz1YnOam1DXrq+u927ZGOFUHjFUTdMJBnke9bUqcoqzIlJM6G18QT2iQxMVYN2xg1W1O8k1Il1x\nuHBqW1tI9WSI+WI3B4K96WXRL2C4PlISpqeaCfZjs7GLLaGGMOxJDfzrMmctkdq6d9OuZwYim0r8\n2K5q6Ro3ZGGGBwRW9OdyJRsUJHIGBVZmOamlHNV2BrdMysAbmn+cVxzULHbUe4mmBeE5p4myetUA\nxFPVqloZorcFec0ya8eRSC2RVIvUZep5UVcleQ5qpKcnNSk5FQPVIlkDVC1TNUTVaZJC1MNPaozT\nEMNRmnmmGgDr35pq8HrV4xRPbNzhx+tUxEx6VimaNFiJz0q2jBeQaz13KfWrkQYryKGNFkT54Bqv\nNOzOMseBgU0H5uKR4dxyDQrCHeewpRM+ORkUu9xGsZOQKB7Ci4WNbRtR+zT5JJ9B6V6LaX0VxarM\nsmARzntXlcAQShj1rfudTjh0lIoiVkPXB61x16fNJWN4SstTodW1Oyt7SSTcrSH5doPJrzu7lEjl\nsjk+tVLi6dmOWJqo1wehroo0FTRlObkTsrZ7Ae9R+Ux9APrUDTk9zUYnYHrXRymdyZoXyRjI9ahK\nbTzxSG4J709ZQy4bkUNAmMxRk1METb1NRkbTipuUNJIpOtLyTipfJXyy27BHapbsCRBUb1IaiamB\nCwqFqnaomFVcRA1RkVMwqMincViIimYqUimkUXCx31latMxXnPam3MBt3O5SBVjTbpBKWbJx0AqL\nVr5p3EZGFUnFcalLnsdDS5SvAI5JlVjgE9a6WxsrS6g8ouQw+7xXJwLulXJwM811GlxyJeYVdwUZ\nP0pV9twpmVqtg1lNgfdPQ1n+c3TNaOsSb5WKuzAE4yc8VjknNa0m3FXInvoTq5Y53HipA7FiTwKi\nt0aSVUXuanuYRFdGFH3Ad6bavYEnYfG6q2eSa6Wx0mO/07z3UluQKz9K06NpFM/yDsSuRXXQW8sW\nAkoaM9BjGK4q9e2iN4U+5wOo6ekMzRj7ynBrGmtyDwK7rxJp8UQNyhO9jlhXISPzXTQq88bmU4WZ\nmmNu4qMxnOa0CV/Go3jDVvzGdijspQCBgVZ8sL1FJhAaOYOUYpIXFP25HzUhkA6Cjf3FJtjshec8\nDAobkYzSFyeKAPxpXHYgYYNMKk1M64qE5FO4rEbLUbKamJphp3FYrstRlatEA0wqKOYLFZlIqMir\nJUetRMvPFFxWOigkZXByatTMHOc002ciAHaanjtJJFK7CfwrNyW5ok9ipkqeK3dKu5d7O8hJK4P0\nqoukzHjaactvcWzGNhtz3rOcozViopp3Ktw26ZyDwTUBArUh055ck8Z7+lRzacyS7FZW+hpqpHa4\ncrKKuU5BxToHBmBPrVmTSrlIw5Q7TVYQvG3KkU1JPZis0dUmqQmGOILwByQcGrH9tG2BYKWZRhQT\nxiuWh3KwxnNWmd8ENXO6MNjTnZPf6tLeCXeBhhge1YEh61dnAAAGT61TdCSetdEEoqyM5XZAQSKa\nCR3qRgR64poXmruTYYwLDk1GyYq0EGKa0ZxwKXMPlKhBpy1KUY9qcsLelDkCRHjvmgcGpxCfSrNv\nplxdMVhiZscnjpUOaWrKUWZzComStGWykjJDLjFRGGhTXQOUzyhpu0jtV4w470wxU+cXKUyKYy1d\naIelRmP2o5x8pRI9qaVHpVtoz6Uwxk9qfMKx6EtwHTiJSc9xUke15QSqKR1AOKiHyrtA4quZSZOE\nwv0riSvsb7GyzQpg5wB1qCQxzEsq7gentVbDSKMkEUCDnhyB6VCil1HdsnBP2You0MTxzVRrGdmV\ntyg4zkVJh1OCCR7VJ5jMu1QV96pNrYLX3EjdIztlJJHYGrKSWkqlXjB5zkjpWebdyxJcU+KHGfnH\nPpSaT6grksyWYJkRBweVHFV3uEdQnlqB7VObRGTIdqYun7jw/wClNSit2FmRJbwMC7HnPAqNrKSZ\nmaMJtHrWlHYqvBc5NWIbPyyxUtzxzUutbZj9ncz4NCDjM0S7e5BpU8NWszNtlZVU81thcrtOcfWp\nI4kUcVi68+5aprsZsHhWyUhmZ3HpnrRP4fsg+FQgDnrWwh5IHrU/ljhu9YOtUTu2XyR7GRH4c00u\nqtCwBHXNW18J6cP4HYH1atNthXpipoptwAAwBxWMq1To2PlXYoWnhvTLVt4gDsf7/NXTY2wTYkAV\nfRBjNWQTnOM1MgyBnjNYSqSbu2PRHIXnguS7mkeG4wCchWHFZsvgO+AJVkYjtmvRN+zOBmpFPfHP\n0rWONqxVrmLit7HlUngzVEbBtyfpzV6x8CT3MTGXMTjoGGM16Uzg/LViMoFUcE1qsZVnpexDtFbH\nkV34H1C3V3ZF2Lznd1FYEmmyKxGyvfnTeCCBt9PWsybQ9MYDfZISc8rxWqxc4/FsSnFnhzWDjnYf\nwqI2jf3T+Ve7L4c01duINuO+48VYj0uxRAn2OIgcbigJNX9cl2E3E8u8xe+KaZgDwBVHzoyf9Yv5\n04Sp/fX8661Tsacxf81BihGBYnpVISr/AHl/OpEnUeh/GlyWC5baQe1RGU9jUZkD9wKQEetJRsDZ\nMHY05Rz0xUampo8dTSk7AkTqAF61KmQeRUIYU9XxWTLLK9c45qZXHeqgcVIHrJopMthqkVhVQSU5\nZKhoq5dVh7VKCDVJZM1Mj1lJFF1RU6EDpVJZKlEoHesWmMvK+OTSmX3qibjsDSiWp5RGgr5FP849\nAazvPxxmpEl9TUuIWRpLJ681KkwBHyis4S+9O87A61FmiHBM0WuCx4OB7UhnLEc1nibvmnJNlqTc\nheyRrCXKcmhZcHGaoiX5RzS+ZT9rK5n7I+eFs3B/1mP+A0jW7/w4b2FW4niWQASfL1PGcVOPKdsg\nKw7EgYFfcnllBLaVhkHGemaVreRMfvU/Hqa0Fj/euPKIz0xil+yBsHIPsUBNK4GaIZQu4vn8aTy5\nGdVV8E9ea00hiif51ZewKp/9eopNkJLlSexKx8igZXMEwB/eH/gJpfJlO0C4fn+6afBcQbt8x45G\nSCv5inNc2KfOZYw/YcHAosFyEi6RgvmuvOAS+c/rQJLiM4e6YH/fNTC9t7kbVkjfB5AbFTARjcBh\niePvgkf1pWXYLsqiacxkrcyNzgYY5pyTXZzi6mGP7zEVI0yKoXyXdQCfamf2tpqpt3gED7pXj9KT\niuw+Z9x7XV+o+WeZgBztYnP5UC61LcwFzOqqOpYim2+oae4J82MOewyv86bHHYzzYe4YHOR5Z2/r\nS5I9h8z7j0vNVxxdXOD0O41Iuoat/wA/s2ScD95/9erYjt44zgsdo4Jz/wDWqI+UVIWSPbjJXPP5\nmo5IvoVzS7jF1LWWfat/OCDj755obVdbCki9ueD3NKPJlUZeEIeSxkzj9KjP2QIB50JX1U53flU+\nyh/KvuHzy7iDWNdUgi8uTnn71MPiLXlJ/wBNm49wagkmUsURd6nqQ3AoDRfNlx7DOf5Uexp9Yr7g\n9pLuSnxNrqAN9sn59QP8KaPFviAD5b6b6FR/hVV4+d7OgGPugnA/rVZowwOJEPoc4NHsKT+yvuD2\nk+5qnxr4jQAm+OfTYv8AhTT478SDpeZ/7ZL/AIViSAsNoIwvcGoGVx3OfpR9Vov7K+4Paz7nRf8A\nCwPES8G7H/fpf8KcvxE8RIeLpD/2xX/CuXOQTubNRE+gxS+qUP5F9we2n3OyHxM8R/8APeL8YV/w\no/4Wh4iHWaH/AL8iuL3H3NBY4xjmp+pUP5F9w/bz7nXJpNqGBLZzyBnP65qZNPEcZZLckdQdx5/S\ns23/ALUDYGlJt6nOcn8+tbUbSeUBPpc6qRyFGQP611tswVijFK32aWRo0VVzlhPgjH1Gakgtry5h\nEkSqAOVbzOCPwPNWD4fgvBujS5Q/3XYpUsekG0i4eaLjgfacClzDsVjEslx5Mk8sdwgBZEfAOfc1\nL9hctlGlkQHADkN+fNM3fZSdxVg3BMkrNn9KtSyxafAJfsz7X5H2aMnH40O4aFW40uKKNibqQZ5O\n1c7fbpVa2ilkg3C52pkjbNCAceoxU66yNzY06+IPG5jyfwqcz2U/W2ulf+EhMMDjsc0ahoZMlnM1\n8IIr+3L4JAIwSPx781GbDUkuzCFDbcc8gc+h9a6jT7WNo1KG5Vlz/rMMfxOCTWgbcyH/AFjADvhl\npc9h8pzFtZX7xCU7VYHALR5I/SpDotw53yvaqAMswiX9cit9Y2h+UXPLHs2f55xTbizvrqVQrxCH\nG10kQsHpc4cpnJpUMEoX7JG7kff8vj8gf6U6BESYwQQ2v2jG5owCpUeta4spY4zl4xgcFVHFZ11e\n2dl+9uLy3ViPvHZvI9OuanmuVYcsbxKVSFCM8bhz9etNla7KI3lFtxxtAC/zqja+JNMu3ZW1RI8c\nDfFtz9Ca1BqNg6gR6nadOMyqD/OkwKcscQm3y2tuCxC7XKgk9B60pgjEf/HjGCTnAIO2mzNY3l4k\nUd9aNO3KYTcM/XpUsmnatbEt9uh8tRk5B4H4Yoem40VnRCCFs2DY5LtjP6iqTxTkBhYoAOPvAg/n\nWhaJNcWKXCXMdwj88yFQPbB71XuxfWspWK3U7yBlGPA9aSYGfch4IvNZIoUHJORgfkKoyzAEhpmY\n/wCzxV26vdW2vHNYK8Y53tIG3fn1rKke/ZgPsQRR0OAD+dXEljHnCsQY3OeQc8UwSKwHy85zzSnz\nycvGCx77gaYRL2jx6e9WIidlBOagZueDVh1bbgrjPqB/hVdkwehpiI/MyARnNBY0m0Z4zTW3buAa\nAOv/ALW1jjZAirj7u0/zNQS6zrqqVFsUJ6EKTj9a0U1+wbpexkemxqkGvaaq/NPuPfCmnr/KL5mf\na3fie4QeW7jb/eUf4VNLN4tSIljgeqDP9KnHinT0fIByO4Wg+LbcudpXB6ZGKLS/lC67mHceKtUj\nfyp5CrAfeMYqlca7f3qlZNQnK/3VbA/Suhl8Q2UoLSW1vKfdc/0pI/E1jFwlnCv+6uP6VSUv5RXX\nc5FNyf8ALxIPXmnodj7xNKf+BYrrz4rsnQg2sX48/wBKhPiayYbJbSIpg8Imaa5v5RadypZ+LLyL\n5JJZJE/2iCfzpL3xTeShhHsSP1KKSf0obX9E3tu0yMMRwTGOf1qxa6/oMgdZbOCLA4zF1/Hmlp/K\nPXuUrFf7RXC28jSHoUjXB/StSztr+1l/dxXkPHJUgZ/CrMfinTbdR5BiUY4Crg0HxhbB+UOexYEU\nNt9Asu5XuNCm1CQPci/kDHkmUH9O1VZvBZx+7hmKjkgkA/1rVPjC0Y7QWAPfk01/GFoOruAO2DU2\nl2Hp3Oefwa/b7QvoSnFPXwhLACwvwvbBjJ5/A1vHxdY4LLLKT7LUUfjSEnb++yOmASfxqeV7juir\nB4LupHikGoR7c87UbI/wrpY/D91CqgatOyY6Zzj86xpPGKW6Hf54ZuR+7Iz+dNXxtblAq+bx0LDP\n9amSqSKTijQvPDBuYt8moXxAzw/zDPsBWU3hu+jBZNUIQcgOMA/hjFOk8avuDIXc9sgCmP4xupUy\nI5GOcf6oN+FChUDmiIun3Nvy0pkHqsQ5+lU5I7lCP3DH/eOM1M/iedkWMQzZB7xVTm8Qo7YlicY9\nciqUJCckVJEuwdpjKbucB+CKayXhUkZCjqd3SpW1aBx/qR9ajOpQgH93gHrV8r7E3XchMe4Y3SE9\n+aiZQv8AEx+oqQ3tuekePy4ppvIScbOKaixXQwDI+62KgllaNhiJtvf1qZr2NCcRnH1phvFY5ER/\nKnqI60+GtOKfKc+hFQP4WtFGftTqPoP6mpI/C1sQSLq5IHUEGmP4Wt5VJUzHHqCM/rWfN5l28ism\nhWBlCjUI5OehIyPyNaMHhvTwQzqJFPuef1rKPhhQxK2szAf7OM/+PVZtvCs90rIBLaIOnmEc/hk0\nc3dhbyNMaZo0QKtb23sDMeKW3Xw3HGxmjtFYddr7v51hz+Cr+G5zDKkkf9/cRj8KtSeFNQLDbLbO\np7svzVPMurCz7F8z+F5HOww4A6BAP51RlvvD8coUQbgeCdiAD9c1F/wiOpbDte1H/bP/AOtQvhLU\nNpYzW2fQxgAU1KPcLPsTySeFox5jhCSeFVNzfocVYt30C4hfySIiwzgIyt+eKZF4O1R0BTUVRSOy\nDH86uf8ACHag8e19aI9hF/8AXqeePcfK+xlPa6JBOjnU7hQpyR5Zz+YFblvqei3G1FkWQIPlLoxI\n/EiktvBllBCy3Usty5/j3bcD6c1TtfBsUTSB7ydlY8CPCkD360OcX1BRa6G1HcaShLRtZIepAxx9\neKil1PRWIMn2Y/7Xl7v6Vnt4LsifknnHPO5VP9KRfB1srH/SblV9glL3O49exfbWdFghBMsePRYx\n/hSR67oTkfvolP8AtIOn5VU/4QyzbG+9umPoSP6U5fBulZw0l0zHphhSbh5h7xqf2ro86jNxaP6Z\nVaa+paMGY7rTIH9wE1QPgjSSufPus+gdf6rTG8F6JHnfc3S9wWkUf0qfc8yveLba1pKYXfCXPQKi\n4/nUsmqabKh/0iMYPT5ev4Gs1vCmgxRiVp8pjhnuMA0xtJ8PsmI5oeB/DMT/AFpe55j94kutRs3H\nBTcW67+341n3V5bFhtERGOctn/CmzaXoakETKAPWbr+Oao3OnaSSSkyqMd5xxVxcV3JakPY2uc/I\nyke1VmEbf88V/L/Cqstrp0Cc3AfkDiXP6Co/7MtsEmdMdjuJP6GtFNE8rJ38pc7Cn1FQkqR95c+9\nVUto5ZHSNkLRnB5xij7CFyeCf96nzoXKyZmjzyy0zdGBncoqs1vH0Iz+NNaONBnFVcVj0pbi7IGV\ngB9OacZ7zJ2rAfbJx/Kqazzt921jz7uf8KmSW7JGY4gO/U1zG1idH1Jj/wAuyj8TV9ROU5kiVvUK\nTVJJJcgF9vuFA/nU4wR80rkf72P5UmwsRSjVkXKXNnj1dCMfrVGS41ssAJ7CQDuqN/8AqrS2RZJ+\nUn35pRHDjqBRzBymV9t8RI7gLZEE8ZzSC+8Qufm+yx9htzxWuY4m7g+p6UxVhVv9YAT70uYdjN8v\nxBcSLIdSVCOgQhR/6CatRW/iBMs9/Gw7ZYf/ABFaKiMEZmB+pq18vl8v1qJTY1FHN311d2aIl1qF\nvGzZwTMwLfTCiuN0rVLvUdemSGSQGVeC0z9F9wcmuq8W6Suo2onimQzwK21c9Qeo+tcn4faOO+ty\n+FIcfMByByP5E1tC7jciWjOuNtdnaWmf5f8AptLz/wCPUi2s+dwnIbHTzZj+u+rzXFqFz9oX6YNR\nC8ts8zAj6H/Cp5mPlRE1pfTQhStqw7lmkLH82q1BDfQWxDRQyLj7iqwPp1yaZ9ttegkOfxpft0IP\nyvJn2oc2PlHxWaFR5unQt7yFv/r1K1vC+C2kWTcY68j/AMdpv9pwqvJk+tKuqQ4PzsPoP/r1Dmxq\nJHc3dtb7VOiQuPVUB/pVcXdqys1vpGOeQY9v9KtjUoierN9Bj+tRy3aEZ2uBU8/kVyFKVrAxsfsi\nKx+98o4rC1m+gsxbvFAkaGcCZvLBBXvW21zE5I6n3IrmvFbWy6YMRoJGkGMdferUk+hLi0N1e4tZ\nFg+zJhT82duMism/uTaXtuinNujCVVI5HqPpU18ghjtAqbQ0Qfbnpkk1X8QQkXFocYDxAde/+TWm\nlkRrdjLTVsavK3loIp3weCcehFbRlj/unnvtNYmn2cf/AAkMluBlYi2MkcY710hjcfdRWPuf6Urp\nDsykTHuwNxJ9UNNd1AVWjO1ScAR9as5YdVH4cVKsu4YKop9STQ5BymqurSRzlJkMagZ3sVAqQ3kp\nfAbAPeuHk1y8ldXdlLL907RxT18SX/leWW49cc/n1o5Qudjbal5zkCZZGQ4bbjg1rQXOFYlhkdea\n85j1+8ij8uNkVe/ygk/Umll16+n275On935c/XFJwuNSO2nvoWmKC7i3noBJQUk3nLuFxkHB5NcI\nNYuVkV9y7lbIwg4P4VMfEWoHeRcMN3JyT+npT5Rcx2zw3KLvOCMfdzzWLfapf2cyH7DuQnGQ5P8A\nIcVhL4i1JFI+1MwPXJzUg8S6gY9vmpg9ygJ/WhILnfafI0sKO4CsRkqD0/Or5vpFbYtlclQm7eAu\nD7da8o/ta5MhcSBXJzuQYJ/EVb/4SrVo1x9ub/gWDWcqVylUsdRearPceav9nXsTYKqzJuAPbOK5\n/wAPgfaruQAku4x8p461A3irVHAP2rpzkKKqW+u31mjKk3DYJGwdgB/IVajZEt3OwVXfGAxDH0qO\n4nSAqszjL9BjJrmv+Env5MEzrkf7IFMfxDctgyMjY6cf4U7Bc6tkIXPy/h1P5VAjmRhttrg/8B/+\nvXOR+Jb1EKRsmP8AcH86YuvXgfd5+fY8iiw+Y62JmDv9wCPg5YZH9auLiQgEhs/dw2M49PWuEl1m\n6nlV5JEcr2Zc0v8AwkV8NoWfbsPyhFAxUuFwUjvFi3j7kgINV737RDaubCJZJwQPm4+tca3iHUWQ\np9rkwTnHvUQ1e/DMy3k2T1+c1Ps33K5zsbSW+nib7ZbNE645RyQ34dqzrhILq5Y3TxiGOAhSzfKG\nbI6nvgVzz6vfSPuaXc397Az+dVpLubY5JBydxyM5PrVKHmLnNS7YyR2besQTPY7SRxSeItkl7GiN\nkQ24IwQed2OorGiuJNqsrHKnP40SSvLIzs3zN1qrbEX3N6y8tfEMvnEJJmTfkjjhfX3zW88UbwSi\nHcr7flZcEZ/OuC8x/NMrNudupbnNSC4fAHHHtUOF+panbodfZWl1FH/pdxFKfQY79s4q+kdsWUPt\nRj1Tfk/pXA+e56H8hSi6nUgiRwR3DGlKk31BTS6FLPXPX3pVLZAXrTaMZNakEhcjqDmgSZPOfwqP\nFKF+tAEwYd2IpqyAvjnmmbaF+VsqcEHqKAHs45/wpodcdD+FNwc0o/KgBxkzgKv50hBP3jikC/lQ\nePWgByts6EkUb2OSOlMx6GgCgBcn0pNxzR34FKQw6igB6uR1GKCz7iRkioiT0xTl3jkZH1oAkEjH\n7y496GdQR0z9KjLM3XGPTNOEasM5IoAXzgPU0Gf0XFAVQNoING6McEDNACidT2waaZgQeD+dDAde\nAKjZfTpQAI20Hil8wg5FJuCkYH196cHjPOOaAE80+lOSQN14NG+P/Ip21RzigA8xQcZoMq0vBoOO\n9AH/2Q==\n",
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -83,95 +139,14 @@
       "A person rides a horse on a beach at sunset .\n",
       "A surfer looks at the ocean while the sun is setting .\n",
       "people look out at the ocean as some birds fly over\n",
-      "\n",
-      "OUTPUT: \n",
-      "You re the only person on the beach right now , you know , I do n't think I will ever fall in love with you , and when the sea breeze hits me , I thought , Hey\n"
+      "\n"
      ]
     }
    ],
    "source": [
+    "imgpath =  './images/ex1.jpg'\n",
+    "show_img_array(to_np(imgpath))\n",
     "generate.story(z, './images/ex1.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NEAREST-CAPTIONS: \n",
-      "Woman standing in front of a swimming pool with parrots on her shoulder .\n",
-      "A photo take though glass of a polar pear diving under water .\n",
-      "Cat laying in a Nestle water bottle wrapper .\n",
-      "A couple of people standing inside of a swimming pool .\n",
-      "A woman drinking water from a water bottle .\n",
-      "\n",
-      "output costs -----\n",
-      "6 Mother Night , I 'm looking at you right now , I do n't know what to do with it , because of me drinking water from under water , I thought , Oh my God\n",
-      "-----\n",
-      "OUTPUT>>>>>>>>>>\n",
-      "Mother Night , I 'm looking at you right now , I do n't know what to do with it , because of me , I thought , You drink water all night\n",
-      "<<<<<<<<<<OUTPUT\n",
-      "NEAREST-CAPTIONS: \n",
-      "Woman standing in front of a swimming pool with parrots on her shoulder .\n",
-      "A photo take though glass of a polar pear diving under water .\n",
-      "Cat laying in a Nestle water bottle wrapper .\n",
-      "A couple of people standing inside of a swimming pool .\n",
-      "A woman drinking water from a water bottle .\n",
-      "\n",
-      "output costs -----\n",
-      "37 It feels good to see Maya standing in the water bottle , asking me what she 's doing , I promise you , of course , I 've never been with you , I thought you drowned out all my bottled water\n",
-      "-----\n",
-      "OUTPUT>>>>>>>>>>\n",
-      "It feels good to see Maya standing in the water bottle , asking me what she 's doing , I promise you , of course , you 're right , I thought I d drowned out\n",
-      "<<<<<<<<<<OUTPUT\n",
-      "NEAREST-CAPTIONS: \n",
-      "Woman standing in front of a swimming pool with parrots on her shoulder .\n",
-      "A photo take though glass of a polar pear diving under water .\n",
-      "Cat laying in a Nestle water bottle wrapper .\n",
-      "A couple of people standing inside of a swimming pool .\n",
-      "A woman drinking water from a water bottle .\n",
-      "\n",
-      "output costs -----\n",
-      "39 We can count in the glass of water , girl , since you do n't really want me to come out of your girlfriend 's life , she said , sucking in a deep breath , I thought I 'd taste you\n",
-      "-----\n",
-      "OUTPUT>>>>>>>>>>\n",
-      "We can count in the glass of water , girlfriend , since you do n't lie to me , she said , looking out of my mouth , I thought : Sweet water\n",
-      "<<<<<<<<<<OUTPUT\n",
-      "NEAREST-CAPTIONS: \n",
-      "Woman standing in front of a swimming pool with parrots on her shoulder .\n",
-      "A photo take though glass of a polar pear diving under water .\n",
-      "Cat laying in a Nestle water bottle wrapper .\n",
-      "A couple of people standing inside of a swimming pool .\n",
-      "A woman drinking water from a water bottle .\n",
-      "\n",
-      "output costs -----\n",
-      "26 No one can live with looking at you , girl , right now , I 'm thinking of taking it away from her , drink me water , because I do n't know what Sweet Dreams\n",
-      "-----\n",
-      "OUTPUT>>>>>>>>>>\n",
-      "No one can live with looking at you , girl , I 'm sorry , because of the water spilling from me , I thought , You 're absolutely no drink\n",
-      "<<<<<<<<<<OUTPUT\n"
-     ]
-    }
-   ],
-   "source": [
-    "reload(generate)\n",
-    "import search\n",
-    "reload(search)\n",
-    "import decoder\n",
-    "reload(decoder)\n",
-    "imagepath = './images/coke/01.jpg'\n",
-    "generate.story(z, imagepath, k=5, bw=40)\n",
-    "\n",
-    "generate.story(z, imagepath, k=5, bw=40, begin_with=\"It feels good\")\n",
-    "generate.story(z, imagepath, k=5, bw=40, begin_with=\"We can\")\n",
-    "generate.story(z, imagepath, k=5, bw=40, begin_with=\"No one can\")"
    ]
   },
   {
