modified: ipython notebok

--- a/generate_story.ipynb
+++ b/generate_story.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,9 @@
       "A person rides a horse on a beach at sunset .\n",
       "A surfer looks at the ocean while the sun is setting .\n",
       "people look out at the ocean as some birds fly over\n",
-      "\n"
+      "\n",
+      "OUTPUT: \n",
+      "You re the only person on the beach right now , you know , I do n't think I will ever fall in love with you , and when the sea breeze hits me , I thought , Hey\n"
      ]
     }
    ],
